ci: replace basic CI workflow with enhanced core CI pipeline
- Replace simple ci.yml with comprehensive core-ci.yml
- Add cross-platform builds (Linux, macOS, Windows)
- Implement coverage enforcement (75% threshold)
- Add security audit and dependency checks
- Include demo validation and comprehensive testing
- Add performance benchmarking capabilities
- Implement quality gates and automated reporting

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 members = [
     "crates/gc_core",
     "crates/gc_cli",
-    "crates/gc_tui",
 ]
 resolver = "2"
+
+[workspace.package]
+rust-version = "1.81.0"
+license = "MIT OR Apache-2.0"
+authors = ["Goblin Camp Contributors"]
