--- a/crates/gc_cli/Cargo.toml
+++ b/crates/gc_cli/Cargo.toml
@@ -2,6 +2,7 @@
 name = "gc_cli"
 version = "0.1.0"
 edition = "2021"
+rust-version = "1.81.0"
 description = "CLI shell for Goblin Camp to run headless simulations or text UI"
 license = "MIT OR Apache-2.0"
 authors = ["Goblin Camp Contributors"]
@@ -17,6 +18,3 @@ rand = "0.8"
 # Workspace members
 [dependencies.gc_core]
 path = "../gc_core"
-
-[dependencies.gc_tui]
-path = "../gc_tui"
