--- a/crates/gc_cli/Cargo.toml
+++ b/crates/gc_cli/Cargo.toml
@@ -14,6 +14,7 @@ serde_json = "1.0"
 clap = { version = "4.5", features = ["derive"] }
 anyhow = "1.0"
 rand = "0.8"
+gc_tui = { path = "../gc_tui" }
 
 # Workspace members
 [dependencies.gc_core]
