--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,11 @@ target/coverage/
 *.profraw
 *.profdata
 
-# VS Code
+# VS Code (allow project-recommended settings)
 .vscode/
+!.vscode/extensions.json
+!.vscode/settings.json
+!.vscode/tasks.json
 
 # OS
 .DS_Store
