feat(vscode): optimize workspace for agent mode development
- Enhanced Rust Analyzer settings with Clippy integration
- Added 20+ comprehensive VS Code tasks for development workflow
- Configured LLDB debugging for CLI, core, and TUI applications
- Optimized editor settings for AI agent development
- Added agent-specific development guide and quick reference

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,13 +1,35 @@
 {
   "recommendations": [
+    // Core Rust development
     "rust-lang.rust-analyzer",
     "tamasfe.even-better-toml",
     "serayuzgur.crates",
     "vadimcn.vscode-lldb",
+    
+    // Documentation and formatting
     "EditorConfig.EditorConfig",
     "DavidAnson.vscode-markdownlint",
     "streetsidesoftware.code-spell-checker",
+    
+    // Infrastructure and configuration
     "ms-azuretools.vscode-docker",
-    "redhat.vscode-yaml"
+    "redhat.vscode-yaml",
+    
+    // Agent mode productivity enhancements
+    "ms-vscode.vscode-json",
+    "bradlc.vscode-tailwindcss",
+    "ms-vscode.hexeditor",
+    
+    // Git and GitHub workflow
+    "eamodio.gitlens",
+    "GitHub.vscode-pull-request-github",
+    "GitHub.vscode-github-actions",
+    
+    // Code quality and analysis
+    "ms-vscode.vscode-typescript-next",
+    "ms-vscode.vscode-js-debug",
+    
+    // Additional Rust tooling
+    "ms-vscode.vscode-json"
   ]
 }
