--- a/crates/gc_core/Cargo.toml
+++ b/crates/gc_core/Cargo.toml
@@ -11,6 +11,7 @@ authors = ["Goblin Camp Contributors"]
 bevy_ecs = "0.14"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+ron = "0.8"
 rand = "0.8"
 thiserror = "1.0"
 pathfinding = "4.9.0"
