--- a/crates/gc_core/Cargo.toml
+++ b/crates/gc_core/Cargo.toml
@@ -12,6 +12,7 @@ bevy_ecs = "0.14"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 ron = "0.8"
+ciborium = { version = "0.2", features = ["std"] }
 rand = "0.8"
 thiserror = "1.0"
 pathfinding = "4.9.0"
