docs+dev: Save/Load v2 tracking + lean agent config (PR #159)\n\n- add Save/Load v2 tracking links in docs/design/save_load.md\n- streamline VS Code config; cargo-aware test debug; minimal extensions\n- add dev.sh coverage-check task referenced by tasks.json\n- remove redundant agent-dev.sh\n- drop .claude agent workspace doc from repo\n\nRationales: keep repo lean, avoid editor bloat, preserve ergonomics

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -200,6 +200,19 @@
       "problemMatcher": []
     },
     {
+      "label": "GC: Build Core Tests",
+      "type": "shell",
+      "command": "cargo test --package gc_core --no-run",
+      "group": "build",
+      "presentation": {
+        "echo": true,
+        "reveal": "always",
+        "focus": false,
+        "panel": "shared"
+      },
+      "problemMatcher": []
+    },
+    {
       "label": "GC: Git Status",
       "type": "shell",
       "command": "git status",
