--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -15,21 +15,9 @@
     "ms-azuretools.vscode-docker",
     "redhat.vscode-yaml",
     
-    // Agent mode productivity enhancements
-    "ms-vscode.vscode-json",
-    "bradlc.vscode-tailwindcss",
-    "ms-vscode.hexeditor",
-    
     // Git and GitHub workflow
     "eamodio.gitlens",
     "GitHub.vscode-pull-request-github",
-    "GitHub.vscode-github-actions",
-    
-    // Code quality and analysis
-    "ms-vscode.vscode-typescript-next",
-    "ms-vscode.vscode-js-debug",
-    
-    // Additional Rust tooling
-    "ms-vscode.vscode-json"
+    "GitHub.vscode-github-actions"
   ]
 }
