--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,13 @@
       "name": "GC: Debug Core Tests",
       "type": "lldb",
       "request": "launch",
-      "program": "${workspaceFolder}/target/debug/deps/gc_core-*",
+      "cargo": {
+        "args": ["test", "--no-run", "--package", "gc_core"],
+        "filter": {
+          "name": "gc_core",
+          "kind": "lib"
+        }
+      },
       "args": [],
       "cwd": "${workspaceFolder}",
       "env": {
